# DSA-2026

./: .gitignore
AVL_Tree/: BinaryTreeVisualizer.pro  CMakeLists.txt  avltree.cpp  avltree.h  binarysearchtree.cpp  binarytree.h  main.cpp  mainwindow.cpp  mainwindow.h  test.cpp  treetests.cpp  treetests.h
Binary_Search_Tree/: BinaryTreeVisualizer.pro  CMakeLists.txt  binarysearchtree.h  binarytree.cpp  binarytree.h  main_old.cpp  mainwindow.cpp  mainwindow.h  treetests.cpp  treetests.h
Binary_Tree/: BinaryTreeVisualizer.pro  CMakeLists.txt  binarytree.cpp  binarytree.h  main.cpp  mainwindow.cpp  mainwindow.h  test.cpp  treetests.cpp  treetests.h  treewidget.cpp  treewidget.h
Hash_Table/: CMakeLists.txt  HashTableQt.pro  hashtable.cpp  hashtable_qt.h  main.cpp  main_qt.cpp  mainwindow.cpp  mainwindow.h
Huffman_Encoding/: CMakeLists.txt  bitvector.hpp  huffman.hpp  main.cpp  test.cpp
Merge_Sort/: CMakeLists.txt  main.cpp
Merge_Sort/output/: f_0.txt  test_data.txt
